syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "HelloGrpcProto";

package al.grpc.helloworld;


message HelloRequest {
    string request = 1;
}

message HelloResponse {
    string response = 1;
}


service Hello {
    rpc unaryHello(HelloRequest) returns (HelloResponse) {}
}
